--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>飛飛的myweb</title>
+    <title>飛飛 selfWeb</title>
 
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -29,7 +29,7 @@
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
             <span class="d-block d-lg-none">Meow</span>
             <span class="d-none d-lg-block">
-                D0449763 林子婷<br>
+                飛飛<br>
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="/static/img/profile.jpg" alt="">
         </span>
         </a>
@@ -273,11 +273,15 @@
             <div class="my-auto">
                 <h2 class="mb-5">榮譽事蹟</h2>
                 <ul class="fa-ul mb-0">
-                    <li><i class="fa-li fa fa-trophy text-warning"></i>日本 SECCON CTF for Girls 資安競賽 第二名</li>
-                    <li><i class="fa-li fa fa-trophy text-warning"></i>2018 AIS3新型態資安暑期課程 Final CTF 中區第一名</li>
-                    <li><i class="fa-li fa fa-trophy text-warning"></i>2018經濟部工業局 App Hackathon 第三名</li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>106年行政院國家資通安全網路攻防演練（攻擊手）</li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>107年行政院國家資通安全網路攻防演練（攻擊手）</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>108年行政院國家資通安全網路攻防演練（攻擊手）</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2017日本 SECCON CTF for Girls 資安競賽 第二名</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2018 AIS3新型態資安暑期課程 Final CTF 中區第一名</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2018經濟部工業局 App Hackathon 第三名</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2019 T貓盃全國資安基礎實務能力競賽 大專組 第二名</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2019 經濟部工業局 行動應用 App檢測工具評選 第二名</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2019第六屆清華創業日區塊鏈組 平台獎</li>
                 </ul>
             </div>
         </section>
