--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>飛飛 selfWeb</title>
+    <title>飛飛</title>
 
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -105,6 +105,22 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
+                        <h3 class="mb-0">資安顧問</h3>
+                        <div class="subheading mb-3">盧氪賽忒</div>
+                        <ul>
+                            <li>滲透測試</li>
+                            <li>紅隊演練</li>
+                            <li>物聯網設備漏洞挖掘</li>
+                        </ul>
+                    </div>
+                    <div class="resume-date text-md-right">
+                        <span class="text-primary">2019/09 - 至今</span>
+                    </div>
+                </div>
+                
+                
+                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                    <div class="resume-content mr-auto">
                         <h3 class="mb-0">資安工程師</h3>
                         <div class="subheading mb-3">三甲科技</div>
                         <ul>
@@ -114,7 +130,7 @@
                         </ul>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">2016/09 - 至今</span>
+                        <span class="text-primary">2016/09 - 2019/08</span>
                     </div>
                 </div>
 
@@ -128,7 +144,7 @@
                         </ul>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">2016/09 - 至今</span>
+                        <span class="text-primary">2016/09 - 2019/08</span>
                     </div>
                 </div>
 
@@ -138,7 +154,7 @@
                         <div class="subheading mb-3">逢甲大學黑客社第五屆</div>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">2018/07 - 至今</span>
+                        <span class="text-primary">2018/07 - 2019/06</span>
                     </div>
                 </div>
 
@@ -207,7 +223,6 @@
                     <li><i class="fa-li fa fa-check"></i> 封包嗅探</li>
                     <li><i class="fa-li fa fa-check"></i> 社交工程</li>
                     <li><i class="fa-li fa fa-check"></i> OSINT</li>
-                    <li><i class="fa-li fa fa-check"></i> 雲端APP檢測</li>
 
                 </ul>
             </div>
@@ -223,46 +238,50 @@
                         <th>演講/授課單位</th>
                         <th>主題</th>
                     </tr>
-                    <tr>
-                        <td>2017 TDOH conf 駭客地下城</td>
-                        <td> APP檢測之經驗分享 </td>
-                    </tr>
-                    <tr>
-                        <td>逢甲大學黑客社 資安系列課程</td>
-                        <td>駭客精神與基礎資訊安全入門</td>
-                    </tr>
-                    <tr>
-                        <td>逢甲大學黑客社 程式系列課程</td>
-                        <td>Python基礎與HTML簡介</td>
-                    </tr>
-                    <tr>
-                        <td>逢甲大學黑客社 資安系列課程</td>
-                        <td>從資安入門到CTF人生</td>
-                    </tr>
-                    <tr>
-                        <td>逢甲大學黑客社 資安系列課程</td>
-                        <td>終端機指令-pip、Jupyter實務</td>
-                    </tr>
-                    <tr>
-                        <td>逢甲大學黑客社 資安系列課程</td>
-                        <td>網路概論、Python爬蟲實現自動化登入</td>
-                    </tr>
-                    <tr>
-                        <td>逢甲大學黑客社 資安系列課程</td>
-                        <td>資安入門之黑客工具</td>
-                    </tr>
-                    <tr>
-                        <td>逢甲大學黑客社 資安系列課程</td>
-                        <td>機房知識與APP檢測</td>
-                    </tr>
-                    <tr>
-                        <td>TDOH中區聚</td>
-                        <td> 滲透微經驗分享 </td>
-                    </tr>
-                    <tr>
-                        <td>TDOHxSITCON中區聚</td>
-                        <td> 資安資源的整合和心路歷程<br> </td>
-                    </tr>
+                     <tr>
+                        <td>2017 TDOH conf 駭客地下城   </td>
+                        <td>APP檢測之經驗分享</td>
+                      </tr>
+                      <tr>
+                        <td>2018 逢甲大學安全程式設計</td>
+                        <td>資訊安全實務</td>
+                      </tr>
+                      <tr>
+                        <td>2019 TDOH中區聚</td>
+                        <td>滲透微經驗分享 & 資安資源的整合和心路歷程</td>
+                      </tr>
+                      <tr>
+                        <td>2019 SITCON學生計算機年會</td>
+                        <td>黑客、社團、資訊魔法學習大總匯</td>
+                      </tr>
+                      <tr>
+                        <td>2019 環鴻科技</td>
+                        <td>駭客入侵案例與防範 & 弱點掃描與滲透測試</td>
+                      </tr>
+                      <tr>
+                        <td>2019 Mini-SOC資訊安全研習課程</td>
+                        <td>網路安全概要</td>
+                      </tr>
+                      <tr>
+                        <td>2019 國防大學管理學院新訓課程</td>
+                        <td>滲透測試與 APP 檢測、CTF 入門與解題工具</td>
+                      </tr>
+                      <tr>
+                        <td>2019 逢甲大學資訊安全宣導週</td>
+                        <td>你的隱私權值錢嗎</td>
+                      </tr>
+                      <tr>
+                        <td>2020 資安社團幹部培訓技術研習</td>
+                        <td>滲透測試流程與實作</td>
+                      </tr>
+                      <tr>
+                        <td>2020 成功大學數位創新學院實驗計畫</td>
+                        <td>資訊安全實務</td>
+                      </tr>
+                      <tr>
+                        <td>2020 AIS3 新型態資安暑期課程</td>
+                        <td>傑出校友演講</td>
+                      </tr>
                 </table>
             </div>
         </section>
@@ -276,12 +295,15 @@
                     <li><i class="fa-li fa fa-trophy text-warning"></i>106年行政院國家資通安全網路攻防演練（攻擊手）</li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>107年行政院國家資通安全網路攻防演練（攻擊手）</li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>108年行政院國家資通安全網路攻防演練（攻擊手）</li>
-                    <li><i class="fa-li fa fa-trophy text-warning"></i>2017日本 SECCON CTF for Girls 資安競賽 第二名</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2017 日本 SECCON CTF for Girls 資安競賽 第二名</li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2018 AIS3新型態資安暑期課程 Final CTF 中區第一名</li>
-                    <li><i class="fa-li fa fa-trophy text-warning"></i>2018經濟部工業局 App Hackathon 第三名</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2018 經濟部工業局 App Hackathon 第三名</li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2019 T貓盃全國資安基礎實務能力競賽 大專組 第二名</li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2019 經濟部工業局 行動應用 App檢測工具評選 第二名</li>
-                    <li><i class="fa-li fa fa-trophy text-warning"></i>2019第六屆清華創業日區塊鏈組 平台獎</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2019 第六屆清華創業日區塊鏈組 平台獎</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2019 暑期資安鑑識營隊惡意程式定位與查找實務訓練暨競賽 第一名</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2019 2020 IoT Sandbox 智慧物聯網資安競賽 決賽資格</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2019 IDB X HITCON BBC 漏洞挖掘競賽 聯網設備組 冠軍</li>
                 </ul>
             </div>
         </section>
