--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
                         <h3 class="mb-0">資安顧問</h3>
-                        <div class="subheading mb-3">盧氪賽忒</div>
+                        <div class="subheading mb-3">盧氪賽忒股份有限公司（Leukocyte-Lab）</div>
                         <ul>
-                            <li>滲透測試</li>
-                            <li>紅隊演練</li>
+                            <li>企業資安服務（弱點掃描、滲透測試、紅隊演練）</li>
+                            <li>物聯網設備自動化檢測 ArgusHack-Carrier</li>
                             <li>物聯網設備漏洞挖掘</li>
                         </ul>
                     </div>
@@ -122,7 +122,7 @@
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
                         <h3 class="mb-0">資安工程師</h3>
-                        <div class="subheading mb-3">三甲科技</div>
+                        <div class="subheading mb-3">三甲科技股份有限公司</div>
                         <ul>
                             <li>資安資訊分析與分析平台建置與維護（Django）</li>
                             <li>科技部領域工程教育人才培育與研究計畫之網站開發及維護（Django）</li>
@@ -302,8 +302,8 @@
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2019 經濟部工業局 行動應用 App檢測工具評選 第二名</li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2019 第六屆清華創業日區塊鏈組 平台獎</li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2019 暑期資安鑑識營隊惡意程式定位與查找實務訓練暨競賽 第一名</li>
-                    <li><i class="fa-li fa fa-trophy text-warning"></i>2019 2020 IoT Sandbox 智慧物聯網資安競賽 決賽資格</li>
-                    <li><i class="fa-li fa fa-trophy text-warning"></i>2019 IDB X HITCON BBC 漏洞挖掘競賽 聯網設備組 冠軍</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2020 IoT Sandbox 智慧物聯網資安競賽 決賽資格</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2020 IDB X HITCON BBC 漏洞挖掘競賽 聯網設備組 冠軍</li>
                 </ul>
             </div>
         </section>
