--- a/index.html
+++ b/index.html
@@ -282,6 +282,10 @@
                         <td>2020 AIS3 新型態資安暑期課程</td>
                         <td>傑出校友演講</td>
                       </tr>
+                      <tr>
+                        <td>2020 清華大學資安讀書會</td>
+                        <td>Web Security</td>
+                      </tr>
                 </table>
             </div>
         </section>
@@ -304,6 +308,8 @@
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2019 暑期資安鑑識營隊惡意程式定位與查找實務訓練暨競賽 第一名</li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2020 IoT Sandbox 智慧物聯網資安競賽 決賽資格</li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2020 IDB X HITCON BBC 漏洞挖掘競賽 聯網設備組 冠軍</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2020 國家中山科學研究院 神盾盃網路奪旗競賽 決賽資格</li>
+
                 </ul>
             </div>
         </section>
