--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                         <td>你的隱私權值錢嗎</td>
                       </tr>
                       <tr>
-                        <td>2020 資安社團幹部培訓技術研習</td>
+                        <td>2020 資安社團幹部培訓技術研習@輔仁大學</td>
                         <td>滲透測試流程與實作</td>
                       </tr>
                       <tr>
@@ -280,11 +280,19 @@
                       </tr>
                       <tr>
                         <td>2020 AIS3 新型態資安暑期課程</td>
-                        <td>傑出校友演講</td>
+                        <td>傑出校友演講-走在資安路上</td>
                       </tr>
                       <tr>
                         <td>2020 清華大學資安讀書會</td>
                         <td>Web Security</td>
+                      </tr>
+                      <tr>
+                        <td>2020 調查局資安調查專業教育訓練</td>
+                        <td>滲透測試實務</td>
+                      </tr>
+                      <tr>
+                        <td>2020 逢甲大學資訊安全宣導週</td>
+                        <td>今晚釣到哪隻大魚-論社交攻擊原理與實際案例探討</td>
                       </tr>
                 </table>
             </div>
