--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         <div class="subheading mb-3">資訊工程學系碩士班</div>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">2019.09 </span>
+                        <span class="text-primary">2021.09 </span>
                     </div>
                 </div>
 
@@ -294,6 +294,22 @@
                         <td>2020 逢甲大學資訊安全宣導週</td>
                         <td>今晚釣到哪隻大魚-論社交攻擊原理與實際案例探討</td>
                       </tr>
+                      <tr>
+                        <td>2021 中央警察大學與新北市政府警察局</td>
+                        <td>教育訓練 - Web Security </td>
+                      </tr>
+                      <tr>
+                        <td>2021 教育部人才培育計畫 - 東華大學 </td>
+                        <td>Web Security </td>
+                      </tr>
+                      <tr>
+                        <td>2021 高雄科技大學</td>
+                        <td>關於駭客的入侵手法 - ATT&CK </td>
+                      </tr>
+                      <tr>
+                        <td>2021 AIS3 Club 南區</td>
+                        <td>Web Security </td>
+                      </tr>
                 </table>
             </div>
         </section>
@@ -317,6 +333,10 @@
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2020 IoT Sandbox 智慧物聯網資安競賽 決賽資格</li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2020 IDB X HITCON BBC 漏洞挖掘競賽 聯網設備組 冠軍</li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2020 國家中山科學研究院 神盾盃網路奪旗競賽 決賽資格</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2020 HITCON X BALSN 資安交流經典賽 交流資格 - 悍冰黑熊</li>
+
+                    
+
 
                 </ul>
             </div>
