--- a/index.html
+++ b/index.html
@@ -307,8 +307,64 @@
                         <td>關於駭客的入侵手法 - ATT&CK </td>
                       </tr>
                       <tr>
-                        <td>2021 AIS3 Club 南區</td>
+                        <td>2021 AIS3 Club 南區@0612</td>
                         <td>Web Security </td>
+                      </tr>
+                      <tr>
+                        <td>2021 SCIST @0815</td>
+                        <td>Linux Hand On</td>
+                      </tr>
+                      <tr>
+                        <td>2021 SCIST @0821</td>
+                        <td>Web Security Hand On</td>
+                      </tr>
+                      <tr>
+                        <td>2021 AIS3 Club ＠0918</td>
+                        <td>Web Security </td>
+                      </tr>
+                      <tr>
+                        <td>2021 臺灣科技大學資安研究社 ＠0930</td>
+                        <td>資安概論</td>
+                      </tr>
+                      <tr>
+                        <td>2021 臺灣科技大學資安研究社 ＠1007</td>
+                        <td>Linux & Web Basic</td>
+                      </tr>
+                      <tr>
+                        <td>2021 臺灣科技大學資安研究社 ＠1014</td>
+                        <td>Web Security Basic</td>
+                      </tr>
+                      <tr>
+                        <td>2021 臺灣科技大學資安研究社 ＠1021</td>
+                        <td>SQL injection</td>
+                    </tr>
+                      <tr>
+                        <td>2021 SCIST ＠1030</td>
+                        <td>Web Security Basic</td>
+                      </tr>
+                      <tr>
+                        <td>2021 ＨackerSir 幹部訓練 ＠1106</td>
+                        <td>HTTP ＆ 網路概論</td>
+                      </tr>
+                      <tr>
+                        <td>2021 SCIST ＠1113</td>
+                        <td>Web Security Advanced</td>
+                      </tr>
+                      <tr>
+                        <td>2021 ＨackerSir 幹部訓練 ＠1120</td>
+                        <td>SQL injetion & Cross Site Scripting</td>
+                      </tr>
+                      <tr>
+                        <td>2021 ＨackerSir 幹部訓練 ＠1211</td>
+                        <td>Remote Code Exection</td>
+                      </tr>
+                       <tr>
+                        <td>2021 靜宜大學 ＠1218</td>
+                        <td>滲透測試</td>
+                      </tr>
+                       <tr>
+                        <td>2021 逢甲大學 ＠1225</td>
+                        <td>物聯網漏洞挖掘工作方</td>
                       </tr>
                 </table>
             </div>
@@ -334,6 +390,7 @@
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2020 IDB X HITCON BBC 漏洞挖掘競賽 聯網設備組 冠軍</li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2020 國家中山科學研究院 神盾盃網路奪旗競賽 決賽資格</li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2020 HITCON X BALSN 資安交流經典賽 交流資格 - 悍冰黑熊</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2021 行政院國家資通安全會報技術服務中心 資安技能金盾獎競賽 <𝕡 𝕒𝕝𝕚𝕘𝕟="𝕟𝕠𝕣𝕥𝕙">🤣🐱 嶄露頭角獎</li>
 
                     
 
