--- a/index.html
+++ b/index.html
@@ -105,12 +105,23 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
+                        <h3 class="mb-0">社長/資安講師</h3>
+                        <div class="subheading mb-3">臺灣科技大學資安研究社</div>
+                    </div>
+                    <div class="resume-date text-md-right">
+                        <span class="text-primary">2021/07 - 至今</span>
+                    </div>
+                </div>
+                
+                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                    <div class="resume-content mr-auto">
                         <h3 class="mb-0">資安顧問</h3>
                         <div class="subheading mb-3">盧氪賽忒股份有限公司（Leukocyte-Lab）</div>
                         <ul>
-                            <li>企業資安服務（弱點掃描、滲透測試、紅隊演練）</li>
+                            <li>企業資安服務（弱點掃描、滲透測試、紅隊演練、資安訪談）</li>
                             <li>物聯網設備自動化檢測 ArgusHack-Carrier</li>
                             <li>物聯網設備漏洞挖掘</li>
+                            <li>專案協調</li>
                         </ul>
                     </div>
                     <div class="resume-date text-md-right">
