--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
 
                 <p class="lead mb-5"></p>
                 <div class="social-icons">
+                    <a href="https://feifei.tw/">
+                        <i class="fab fa-wordpress-in"></i>
+                    </a>
                     <a href="https://www.linkedin.com/in/feifei3363">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
@@ -91,6 +94,9 @@
                     </a>
                     <a href="/blog/">
                         <i class="fas fa-blog"></i>
+                    </a>
+                    <a href="https://www.books.com.tw/products/0010906898">
+                        <i class="fas fa-book"></i>
                     </a>
 
                 </div>
