--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <p class="lead mb-5"></p>
                 <div class="social-icons">
                     <a href="https://feifei.tw/">
-                        <i class="fab fa-wordpress-in"></i>
+                        <i class="fab fa-wordpress"></i>
                     </a>
                     <a href="https://www.linkedin.com/in/feifei3363">
                         <i class="fab fa-linkedin-in"></i>
@@ -336,8 +336,8 @@
                         <td>Web Security Hand On</td>
                       </tr>
                       <tr>
-                        <td>2021 AIS3 Club ＠0918</td>
-                        <td>Web Security </td>
+                        <td>2021 AIS3 Club 資安社團幹部訓練＠0918</td>
+                        <td>經營資安社團的技巧與課程規劃</td>
                       </tr>
                       <tr>
                         <td>2021 臺灣科技大學資安研究社 ＠0930</td>
