--- a/index.html
+++ b/index.html
@@ -407,7 +407,9 @@
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2020 IDB X HITCON BBC 漏洞挖掘競賽 聯網設備組 冠軍</li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2020 國家中山科學研究院 神盾盃網路奪旗競賽 決賽資格</li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2020 HITCON X BALSN 資安交流經典賽 交流資格 - 悍冰黑熊</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2020 第12屆 iT 邦幫忙鐵人賽 Security 組 佳作 - 資安這條路─以自建漏洞環境學習資訊安全</li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2021 行政院國家資通安全會報技術服務中心 資安技能金盾獎競賽 <𝕡 𝕒𝕝𝕚𝕘𝕟="𝕟𝕠𝕣𝕥𝕙">🤣🐱 嶄露頭角獎</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2021 第13屆 iT 邦幫忙鐵人賽 Security 組 佳作 - 資安這條路─系統化學習滲透測試</li>
 
                     
 
