--- a/index.html
+++ b/index.html
@@ -336,6 +336,10 @@
                         <td>Web Security Hand On</td>
                       </tr>
                       <tr>
+                        <td>2021 SITCON 學生計算機年會 @0904</td>
+                        <td>Web Security 領航之路</td>
+                      </tr>
+                      <tr>
                         <td>2021 AIS3 Club 資安社團幹部訓練＠0918</td>
                         <td>經營資安社團的技巧與課程規劃</td>
                       </tr>
@@ -381,7 +385,7 @@
                       </tr>
                        <tr>
                         <td>2021 逢甲大學 ＠1225</td>
-                        <td>物聯網漏洞挖掘工作方</td>
+                        <td>物聯網漏洞挖掘工作坊</td>
                       </tr>
                 </table>
             </div>
