--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         </ul>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">2019/09 - 至今</span>
+                        <span class="text-primary">2019/09 - 2022/01</span>
                     </div>
                 </div>
                 
@@ -200,7 +200,7 @@
                         <div class="subheading mb-3">資訊工程學系碩士班</div>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">2021.09 </span>
+                        <span class="text-primary">2021.09 - 至今</span>
                     </div>
                 </div>
 
@@ -386,6 +386,10 @@
                        <tr>
                         <td>2021 逢甲大學 ＠1225</td>
                         <td>物聯網漏洞挖掘工作坊</td>
+                      </tr>
+                      <tr>
+                        <td>2021 臺灣科技大學資安研究社 ＠1230</td>
+                        <td>Remote Code Exection</td>
                       </tr>
                 </table>
             </div>
