--- a/index.html
+++ b/index.html
@@ -391,6 +391,10 @@
                         <td>2021 臺灣科技大學資安研究社 ＠1230</td>
                         <td>Remote Code Exection</td>
                       </tr>
+                      <tr>
+                        <td>2022 中部高中電資聯合會議 SCAICT ＠0409</td>
+                        <td>網頁安全不安全</td>
+                      </tr>
                 </table>
             </div>
         </section>
