--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <a href="https://www.linkedin.com/in/feifei3363">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="https://github.com/fcu-d0449763">
+                    <a href="https://github.com/fei3363">
                         <i class="fab fa-github"></i>
                     </a>
                     <a href="https://twitter.com/fei3363">
@@ -111,7 +111,7 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0">社長/資安講師</h3>
+                        <h3 class="mb-0">第七屆 + 第八屆 社長/資安講師</h3>
                         <div class="subheading mb-3">臺灣科技大學資安研究社</div>
                     </div>
                     <div class="resume-date text-md-right">
@@ -392,8 +392,64 @@
                         <td>Remote Code Exection</td>
                       </tr>
                       <tr>
-                        <td>2022 中部高中電資聯合會議 SCAICT ＠0409</td>
+                        <td>2022 高中職生資安研習營 @3/11、3/18 </td>
+                        <td>網頁安全</td>
+                      </tr>
+                      <tr>
+                        <td>2022 中正大學@3/19、4/15、4/30、5/14、5/28 </td>
+                        <td>滲透測試工作坊</td>
+                      </tr>
+                      <tr>
+                        <td>2022 雲嘉資安體驗營@3/26 </td>
+                        <td>網頁安全與資安概論</td>
+                      </tr>
+                      <tr>
+                        <td>2022 中部高中電資聯合會議 SCAICT ＠0409  </td>
                         <td>網頁安全不安全</td>
+                      </tr>
+                      <tr>
+                        <td>2022 Monospace 共同工作空間x創科資訊 @0413   </td>
+                        <td>滲透測試</td>
+                      </tr>
+                      <tr>
+                        <td>2022 靜宜大學 行雲者研發基地＠0507  </td>
+                        <td>進階滲透測試</td>
+                      </tr>
+                      <tr>
+                        <td>2022 Monospace 共同工作空間x創科資訊 @0517 </td>
+                        <td>網頁大小事與弱點掃描</td>
+                      </tr>
+                      <tr>
+                        <td>2022 輔仁大學 ＠0520  </td>
+                        <td>資安概論x網頁安全</td>
+                      </tr>
+                      <tr>
+                        <td>2022 靜宜大學 行雲者研發基地＠0521 </td>
+                        <td>安全開發流程 SSDLC</td>
+                      </tr>
+                      <tr>
+                        <td>2022 輔仁大學 ＠0527  </td>
+                        <td>網頁安全</td>
+                      </tr>
+                      <tr>
+                        <td>2022 東海大學 駭客社＠0529  </td>
+                        <td>滲透測試課程</td>
+                      </tr>
+                      <tr>
+                        <td>2022 輔仁大學 NISRA＠0531 </td>
+                        <td>如何自製漏洞環境</td>
+                      </tr>
+                      <tr>
+                        <td>2022 澎湖科技大學 澎湖資安體驗營@0704 </td>
+                        <td>網頁安全</td>
+                      </tr>
+                      <tr>
+                        <td>2022 HITCON@0819 </td>
+                        <td>欸！原來這個網站有洞：手把手帶你認識網站常見漏洞</td>
+                      </tr>
+                      <tr>
+                        <td>2022 AIS3 Junior@0823 </td>
+                        <td>網頁安全</td>
                       </tr>
                 </table>
             </div>
