--- a/index.html
+++ b/index.html
@@ -461,23 +461,30 @@
             <div class="my-auto">
                 <h2 class="mb-5">榮譽事蹟</h2>
                 <ul class="fa-ul mb-0">
-                    <li><i class="fa-li fa fa-trophy text-warning"></i>106年行政院國家資通安全網路攻防演練（攻擊手）</li>
-                    <li><i class="fa-li fa fa-trophy text-warning"></i>107年行政院國家資通安全網路攻防演練（攻擊手）</li>
-                    <li><i class="fa-li fa fa-trophy text-warning"></i>108年行政院國家資通安全網路攻防演練（攻擊手）</li>
-                    <li><i class="fa-li fa fa-trophy text-warning"></i>2017 日本 SECCON CTF for Girls 資安競賽 第二名</li>
-                    <li><i class="fa-li fa fa-trophy text-warning"></i>2018 AIS3新型態資安暑期課程 Final CTF 中區第一名</li>
-                    <li><i class="fa-li fa fa-trophy text-warning"></i>2018 經濟部工業局 App Hackathon 第三名</li>
-                    <li><i class="fa-li fa fa-trophy text-warning"></i>2019 T貓盃全國資安基礎實務能力競賽 大專組 第二名</li>
-                    <li><i class="fa-li fa fa-trophy text-warning"></i>2019 經濟部工業局 行動應用 App檢測工具評選 第二名</li>
-                    <li><i class="fa-li fa fa-trophy text-warning"></i>2019 第六屆清華創業日區塊鏈組 平台獎</li>
-                    <li><i class="fa-li fa fa-trophy text-warning"></i>2019 暑期資安鑑識營隊惡意程式定位與查找實務訓練暨競賽 第一名</li>
+                    
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2022 臺灣科技大學 第一屆「臺科青創明日之星」 冠軍</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2022 111年度「U-start創新創業計畫」第二階段績優團隊獲獎 七維思資安</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2022 111年度「U-start創新創業計畫」第一階段獲補助 七維思資安</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2022 行政院國家資通安全會報技術服務中心 資安技能金盾獎競賽 快樂的語野與她悲慘的馬內醬們 嶄露頭角獎</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2021 臺灣科技大學「創業管理行動實戰平台-開關公司」得獎團隊 考倒我了 我ThinkThihk </li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2021 第13屆 iT 邦幫忙鐵人賽 Security 組 佳作 - 資安這條路─系統化學習滲透測試</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2021 行政院國家資通安全會報技術服務中心 資安技能金盾獎競賽 <𝕡 𝕒𝕝𝕚𝕘𝕟="𝕟𝕠𝕣𝕥𝕙">🤣🐱 嶄露頭角獎</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2020 第12屆 iT 邦幫忙鐵人賽 Security 組 佳作 - 資安這條路─以自建漏洞環境學習資訊安全</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2020 國家中山科學研究院 神盾盃網路奪旗競賽 決賽資格</li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2020 IoT Sandbox 智慧物聯網資安競賽 決賽資格</li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2020 IDB X HITCON BBC 漏洞挖掘競賽 聯網設備組 冠軍</li>
-                    <li><i class="fa-li fa fa-trophy text-warning"></i>2020 國家中山科學研究院 神盾盃網路奪旗競賽 決賽資格</li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2020 HITCON X BALSN 資安交流經典賽 交流資格 - 悍冰黑熊</li>
-                    <li><i class="fa-li fa fa-trophy text-warning"></i>2020 第12屆 iT 邦幫忙鐵人賽 Security 組 佳作 - 資安這條路─以自建漏洞環境學習資訊安全</li>
-                    <li><i class="fa-li fa fa-trophy text-warning"></i>2021 行政院國家資通安全會報技術服務中心 資安技能金盾獎競賽 <𝕡 𝕒𝕝𝕚𝕘𝕟="𝕟𝕠𝕣𝕥𝕙">🤣🐱 嶄露頭角獎</li>
-                    <li><i class="fa-li fa fa-trophy text-warning"></i>2021 第13屆 iT 邦幫忙鐵人賽 Security 組 佳作 - 資安這條路─系統化學習滲透測試</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2019 經濟部工業局 行動應用 App檢測工具評選 第二名</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2019 暑期資安鑑識營隊惡意程式定位與查找實務訓練暨競賽 第一名</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2019 第六屆清華創業日區塊鏈組 平台獎</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2019 T貓盃全國資安基礎實務能力競賽 大專組 第二名</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2018 經濟部工業局 App Hackathon 第三名</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2018 AIS3新型態資安暑期課程 Final CTF 中區第一名</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2017 日本 SECCON CTF for Girls 資安競賽 第二名</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>108年行政院國家資通安全網路攻防演練（攻擊手）</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>107年行政院國家資通安全網路攻防演練（攻擊手）</li>
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>106年行政院國家資通安全網路攻防演練（攻擊手）</li>
+
 
                     
 
