--- a/index.html
+++ b/index.html
@@ -20,7 +20,78 @@
 
     <!-- Custom styles for this template -->
     <link href="static/css/resume.min.css" rel="stylesheet">
-
+    <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            line-height: 1.6;
+            padding: 20px;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+        h1 {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        .tabs {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            margin-bottom: 20px;
+            justify-content: center;
+        }
+        .tab {
+            padding: 8px 16px;
+            border: none;
+            background-color: #e2e8f0;
+            cursor: pointer;
+            border-radius: 4px;
+            font-size: 16px;
+        }
+        .tab.active {
+            background-color: #2563eb;
+            color: white;
+        }
+        .content {
+            display: none;
+        }
+        .content.active {
+            display: block;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        th, td {
+            border: 1px solid #e2e8f0;
+            padding: 12px;
+            text-align: left;
+        }
+        th {
+            background-color: #f8fafc;
+            font-weight: bold;
+        }
+        tr:hover {
+            background-color: #f8fafc;
+        }
+        @media (max-width: 768px) {
+            .tabs {
+                flex-direction: row;
+                overflow-x: auto;
+                white-space: nowrap;
+                -webkit-overflow-scrolling: touch;
+            }
+            table {
+                display: block;
+                overflow-x: auto;
+            }
+        }
+    </style>
 </head>
 
 <body id="page-top">
@@ -120,16 +191,7 @@
                         </ul>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">2021/07 - 2022/06</span>
-                    </div>
-                </div>
-                <div class="resume-item d-flex flex-column flex-md-row mb-5">
-                    <div class="resume-content mr-auto">
-                        <h3 class="mb-0">第七屆 + 第八屆 社長/資安講師</h3>
-                        <div class="subheading mb-3">臺灣科技大學資安研究社</div>
-                    </div>
-                    <div class="resume-date text-md-right">
-                        <span class="text-primary">2021/07 - 2022/06</span>
+                        <span class="text-primary">2022/08 - </span>
                     </div>
                 </div>
                 
@@ -279,6 +341,7 @@
                     <li><i class="fa-li fa fa-check"></i> Python Django </li>
                     <li><i class="fa-li fa fa-check"></i> 網頁前端（HTML、CSS、JavaScript）</li>
                     <li><i class="fa-li fa fa-check"></i> 滲透測試</li>
+		    <li><i class="fa-li fa fa-check"></i> 網站安全</li>
                     <li><i class="fa-li fa fa-check"></i> 弱點掃描</li>
                     <li><i class="fa-li fa fa-check"></i> 封包嗅探</li>
                     <li><i class="fa-li fa fa-check"></i> 社交工程</li>
@@ -293,7 +356,6 @@
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
             <div class="my-auto">
                 <h2 class="mb-5">演講/授課紀錄</h2>
-                   <h1>演講/授課紀錄</h1>
     
     <div class="tabs">
         <button class="tab" onclick="showYear('2017')">2017年</button>
@@ -302,8 +364,8 @@
         <button class="tab" onclick="showYear('2020')">2020年</button>
         <button class="tab" onclick="showYear('2021')">2021年</button>
         <button class="tab" onclick="showYear('2022')">2022年</button>
-		<button class="tab" onclick="showYear('2023')">2023年</button>
-		<button class="tab active" onclick="showYear('2024')">2024年</button>
+	<button class="tab" onclick="showYear('2023')">2023年</button>
+	<button class="tab active" onclick="showYear('2024')">2024年</button>
     </div>
 
     <div id="2017" class="content">
