--- a/index.html
+++ b/index.html
@@ -21,75 +21,110 @@
     <!-- Custom styles for this template -->
     <link href="static/css/resume.min.css" rel="stylesheet">
     <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
         body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-            line-height: 1.6;
-            padding: 20px;
-            max-width: 1200px;
-            margin: 0 auto;
+            font-family: Muli, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            padding-top: 54px;
+            color: #343a40;
         }
-        h1 {
-            text-align: center;
-            margin-bottom: 30px;
+        
+        @media (min-width: 992px) {
+            body {
+                padding-top: 0;
+                padding-left: 17rem;
+            }
         }
-        .tabs {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            margin-bottom: 20px;
-            justify-content: center;
+
+        h1, h2, h3, .h1, .h2, .h3 {
+            font-family: "Saira Extra Condensed", serif;
+            font-weight: 700;
+            color: #343a40;
         }
+
+        .subheading {
+            font-family: "Saira Extra Condensed", serif;
+            font-size: 1.35rem;
+            text-transform: uppercase;
+            font-weight: 500;
+            color: #868e96;
+        }
+
+        #sideNav {
+            background-color: #3d5170;
+        }
+
+        @media (min-width: 992px) {
+            #sideNav {
+                position: fixed;
+                top: 0;
+                left: 0;
+                display: flex;
+                flex-direction: column;
+                width: 17rem;
+                height: 100vh;
+            }
+        }
+
+        .navbar-dark .navbar-nav .nav-link {
+            color: rgba(255, 255, 255, 0.75);
+        }
+
+        .resume-section {
+            padding: 6rem 3rem !important;
+            min-height: 100vh;
+        }
+
         .tab {
             padding: 8px 16px;
             border: none;
             background-color: #e2e8f0;
             cursor: pointer;
             border-radius: 4px;
-            font-size: 16px;
+            margin: 4px;
         }
+
         .tab.active {
-            background-color: #2563eb;
+            background-color: #3d5170;
             color: white;
         }
+
         .content {
             display: none;
+            margin-top: 20px;
         }
+
         .content.active {
             display: block;
         }
+
         table {
             width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
+            margin-top: 1rem;
         }
+
         th, td {
-            border: 1px solid #e2e8f0;
             padding: 12px;
-            text-align: left;
+            border: 1px solid #dee2e6;
         }
-        th {
-            background-color: #f8fafc;
-            font-weight: bold;
+
+        .social-icons a {
+            display: inline-block;
+            width: 3.5rem;
+            height: 3.5rem;
+            background-color: #3d5170;
+            color: #fff !important;
+            border-radius: 100%;
+            text-align: center;
+            font-size: 1.5rem;
+            line-height: 3.5rem;
+            margin-right: 1rem;
         }
-        tr:hover {
-            background-color: #f8fafc;
+
+        .social-icons a:hover {
+            background-color: #4d6180;
         }
-        @media (max-width: 768px) {
-            .tabs {
-                flex-direction: row;
-                overflow-x: auto;
-                white-space: nowrap;
-                -webkit-overflow-scrolling: touch;
-            }
-            table {
-                display: block;
-                overflow-x: auto;
-            }
+
+        .dev-icons {
+            font-size: 3rem;
         }
     </style>
 </head>
