--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         </ul>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">2022/08 - </span>
+                        <span class="text-primary">2022/08 - 至今</span>
                     </div>
                 </div>
                 
