--- a/index.html
+++ b/index.html
@@ -110,7 +110,6 @@
             display: inline-block;
             width: 3.5rem;
             height: 3.5rem;
-            background-color: #3d5170;
             color: #fff !important;
             border-radius: 100%;
             text-align: center;
@@ -229,7 +228,21 @@
                         <span class="text-primary">2022/08 - 至今</span>
                     </div>
                 </div>
-                
+                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+		    <div class="resume-content mr-auto">
+		        <h3 class="mb-0">WEBPT 組長</h3>
+		        <div class="subheading mb-3">HITCON GIRLS</div>
+		        <ul>
+		            <li>指導 WEBPT 相關知識與技術</li>
+		            <li>規劃 WEBPT 課程內容</li>
+		            <li>組織活動與讀書會管理</li>
+		        </ul>
+		    </div>
+		    <div class="resume-date text-md-right">
+		        <span class="text-primary">2019 - 至今</span>
+		    </div>
+		</div>
+		    
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
                         <h3 class="mb-0">第七屆 + 第八屆 社長/資安講師</h3>
