--- a/index.html
+++ b/index.html
@@ -496,13 +496,24 @@
             <div class="my-auto">
                 <h2 class="mb-5">學歷</h2>
 
+
+                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                    <div class="resume-content mr-auto">
+                        <h3 class="mb-0">臺灣科技大學</h3>
+                        <div class="subheading mb-3">數位學習與教育研究所碩士班</div>
+                    </div>
+                    <div class="resume-date text-md-right">
+                        <span class="text-primary">2025.09 - 至今</span>
+                    </div>
+                </div>
+				
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
                         <h3 class="mb-0">臺灣科技大學</h3>
                         <div class="subheading mb-3">資訊工程學系碩士班</div>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">2021.09 - 至今</span>
+                        <span class="text-primary">2021.09 - 2025.08</span>
                     </div>
                 </div>
 
